<resources>
    <string name="app_name">MIOK_Quick_Response_App</string>
    <string name="language_switch">Language</string>
    <string name="button_take_quiz">SAFETY CHECK</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="birthday">Birthday</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>
    <string name="homeTextView">Hi, how are you today?</string>
    <string name="homeTextView_mr">Hi, kei te pēhea koe i tēnei rā?</string>
    <string name="button_quiz">SAFETY CHECK</string>
    <string name="button_quiz_mr">TĪKINA HAUMARU</string>
    <string name="button_contact">CONTACTS</string>
    <string name="button_contact_mr">PŪRONGO WHAKAPĀ</string>
    <string name="button_message">MESSAGE EVERYONE</string>
    <string name="button_message_mr">TĀRONGO KI TE KATOA</string>
    <string name="button_profile">PROFILE</string>
    <string name="button_profile_mr">PŪRONGO</string>
    <string name="profile_add_task">ADD CONTACT</string>
    <string name="profile_add_task_mr">TĀPIRI PŪRONGO WHAKAPĀ</string>
    <string name="contact_name_input">Enter contact name</string>
    <string name="contact_name_input_mr">Tāuru i te ingoa o te pūrongo whakapā</string>
    <string name="contact_dob_input">Enter DOB (DD/MM/YYYY)</string>
    <string name="contact_dob_input_mr">Tāuru i te Rā Whānau (DD/MM/YYYY)</string>
    <string name="contact_phone_input">Enter contact number</string>
    <string name="contact_phone_input_mr">Tāuru tau whakapā</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="add_contact_button_mr">Tāpiri Pūrongo Whakapā</string>

    <string name="name_label">Name: </string>
    <string name="email_label">Email</string>
    <string name="birthday_label">Birthday</string>
    <string name="address_label">Address</string>
    <string name="father_name_label">Fathers Name</string>
    <string name="Caregiver1_label">Caregiver1</string>
    <string name="Caregiver2_label">Caregiver2</string>
    <string name="mother_name_label">Mothers Name</string>
    <string name="save_button">Save</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_label">Phone:  </string>
    <string name="relationship_label">Relationship:  </string>
    <string name="status_label">Status: </string>
    <string name="contact_status">STATUS (appointed by Oranga Tamariki)</string>
    <string name="status_yes">Approved</string>
    <string name="status_no">Not Approved</string>
    <string name="quizResultTextView">Thanks for answering! \nResults have been sent to your contacts.</string>
    <string name="urgent_contact_label">MAKE THIS PERSON MY URGENT CONTACT</string>
    <string name="contact_status_info">Not sure? Visit www.orangatamariki.govt.nz</string>
    <string name="question_image">Question Image</string>

    <!-- Disclaimer Text -->
    <string name="disclaimer_text">This App is for a WINTEC Group Project Assessment only and is not affiliated with any company or government organisation.</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>
    <string name="disclaimer_title">Disclaimer</string>


    <!-- Fragment Labels -->
    <string name="homeFragment">Home</string>
    <string name="contactFragment">Contacts</string>
    <string name="editContactFragment">Edit Contact</string>
    <string name="profileFragment">Profile</string>
    <string name="messageFragment">Message</string>
    <string name="quizFragment">Quiz</string>
    <string name="addContactFragment">Add Contact</string>
    <string name="quizResultFragment">Quiz Completed</string>
    <string name="editProfileFragment">Edit Profile</string>

    <!-- Edit Contact -->
    <string name="save_contact_button">Save Contact</string>

    <!-- Contacts List -->
    <string name="contact_name_label">Name: </string>
    <string name="contact_phone_label">Phone: </string>
    <string name="contact_relationship_label">Relationship: </string>
    <string name="contact_status_label">STATUS: </string>
    <string name="emergency_contact_label">EMERGENCY CONTACT</string>



    <!-- Māori Language -->
    <string name="name_label_mr">Ingoa:</string>
    <string name="email_label_mr">Īmēra</string>
    <string name="birthday_label_mr">Rā Whānau</string>
    <string name="address_label_mr">Wāhi Noho</string>
    <string name="father_name_label_mr">Ingoa o te Matua Tāne</string>
    <string name="mother_name_label_mr">Ingoa o te Matua Wahine</string>
    <string name="save_button_mr">Tāpiri</string>
    <string name="edit_profile_button_mr">Whakauru Rata</string>
    <string name="contact_status_mr">TĀRITARI (i tohua e Oranga Tamariki)</string>
    <string name="status_yes_mr">Kua Whakaaetia</string>
    <string name="status_no_mr">Kāore i Whakaaetia</string>
    <string name="phone_label_mr">Waea: </string>
    <string name="relationship_label_mr">Tūāhua: </string>
    <string name="status_label_mr">Tūnga: </string>
    <string name="quizResultTextView_mr">Kia ora mō tō whakautu! \nKua tukuna ngā hua ki ō hoapā.</string>
    <string name="urgent_contact_label_mr">MAHI TĒNEI TANGATA HE KONEKŌ NOA</string>
    <string name="contact_status_info_mr">Kāore e mōhio? Haere ki www.orangatamariki.govt.nz</string>

    <!-- Disclaimer Text -->
    <string name="disclaimer_text_mr">Ko tēnei taupānga hei arotake mō te Rōpū WINTEC anake, ā, kāore e hono ki tētahi kamupene, rōpū kāwanatanga rānei.</string>
    <string name="acceptButton_mr">Rātū</string>
    <string name="declineButton_mr">Tārewa</string>
    <string name="disclaimer_title_mr">Whakamāramatanga</string>



    <!-- Fragment Labels -->
    <string name="homeFragment_mr">Kāinga</string>
    <string name="contactFragment_mr">Ngā Hoapā</string>
    <string name="editContactFragment_mr">Whakatika Hoapā</string>
    <string name="profileFragment_mr">Kōtaha</string>
    <string name="messageFragment_mr">Karere</string>
    <string name="quizFragment_mr">Whakamātautau</string>
    <string name="addContactFragment_mr">Tāpiri Hoapā</string>
    <string name="quizResultFragment_mr">Kua Oti te Whakamātautau</string>
    <string name="editProfileFragment_mr">Whakatika Kōtaha</string>

    <!-- Edit Contact -->
    <string name="save_contact_button_mr">Tārua i te Pārongo</string>

    <!-- Contacts List -->
    <string name="contact_name_label_mr">Ingoa: </string>
    <string name="contact_phone_label_mr">Waea: </string>
    <string name="contact_relationship_label_mr">Whanaungatanga: </string>
    <string name="contact_status_label_mr">TŪĀHUA: </string>
    <string name="emergency_contact_label_mr">RĀRANGI WHAKAARO TŌKAHI</string>




    <string-array name="relationship_options">
        <item>Parent/Guardian</item>
        <item>Caregiver</item>
        <item>Aunt/Uncle</item>
        <item>Grandparent</item>
        <item>Social Worker</item>
        <item>Iwi Social Worker</item>
        <item>Police</item>
        <item>Other</item>
    </string-array>

    <string-array name="relationship_options_mr">
        <item>Matua/Kaika</item> <!-- Parent/Guardian -->
        <item>Kaiāwhina</item> <!-- Caregiver -->
        <item>Whaea/Matua</item> <!-- Aunt/Uncle (Whaea for Aunt, Matua for Uncles can be generalized as a family term) -->
        <item>Koroua/Koro</item> <!-- Grandparent (Koroua for Grandfather, Koro for Grandmother) -->
        <item>Kaimahi Tokanga</item> <!-- Social Worker -->
        <item>Kaimahi Tokanga Iwi</item> <!-- Iwi Social Worker -->
        <item>Pirihimana</item> <!-- Police -->
        <item>Ētahi Atu</item> <!-- Other -->
    </string-array>


        <!-- Other string resources -->



</resources>