<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splashFragment">

    <!-- Splash Fragment -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.miok_quick_response_app.ui.SplashFragment"
        android:label="SplashFragment">
        <action
            android:id="@+id/action_splashFragment_to_disclaimerFragment"
            app:destination="@id/disclaimerFragment" />
    </fragment>

    <!-- Disclaimer Fragment -->
    <fragment
        android:id="@+id/disclaimerFragment"
        android:name="com.example.miok_quick_response_app.ui.DisclaimerFragment"
        android:label="DisclaimerFragment">
        <action
            android:id="@+id/action_disclaimerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.miok_quick_response_app.HomeFragment"
        android:label="@string/homeFragment">
        <action
            android:id="@+id/action_homeFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_homeFragment_to_messageFragment"
            app:destination="@id/messageFragment" />
        <action
            android:id="@+id/action_homeFragment_to_contactFragment"
            app:destination="@id/contactFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <!-- Contact Fragment (Single Definition) -->
    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.miok_quick_response_app.ContactFragment"
        android:label="@string/contactFragment">
        <action
            android:id="@+id/action_contactFragment_to_editContactFragment"
            app:destination="@id/editContactFragment" />
        <action
            android:id="@+id/action_contactFragment_to_addContactFragment"
            app:destination="@id/addContactFragment" />
    </fragment>


    <!-- Other Fragments -->
    <fragment
        android:id="@+id/editContactFragment"
        android:name="com.example.miok_quick_response_app.EditContactFragment"
        android:label="@string/editContactFragment" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.miok_quick_response_app.ProfileFragment"
        android:label="@string/profileFragment">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.miok_quick_response_app.MessageFragment"
        android:label="@string/messageFragment" />

    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.miok_quick_response_app.questions.QuizFragment"
        android:label="@string/quizFragment" >
        <action
            android:id="@+id/action_quizFragment_to_quizResultFragment"
            app:destination="@id/quizResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.example.miok_quick_response_app.data.AddContactFragment"
        android:label="@string/addContactFragment" />

    <fragment
        android:id="@+id/quizResultFragment"
        android:name="com.example.miok_quick_response_app.questions.QuizResultFragment"
        android:label="@string/quizResultFragment" />

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.miok_quick_response_app.EditProfileFragment"
        android:label="@string/editProfileFragment" />
</navigation>
