<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5EDF3">

    <!-- Disclaimer Title -->
    <TextView
        android:id="@+id/disclaimer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer_title"
        android:textSize="24sp"
        android:textColor="#004B8C"
        android:fontFamily="@font/lalezar_regular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp" />

    <!-- Disclaimer Text -->
    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer_text"
        android:textSize="18sp"
        android:textColor="#004B8C"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:layout_below="@id/disclaimer_title"
        android:padding="24dp"
        android:justificationMode="inter_word" />

    <!-- Accept and Decline Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/disclaimer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptButton"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#004B8C" />

        <Button
            android:id="@+id/declineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/declineButton"
            android:backgroundTint="#004B8C" />
    </LinearLayout>

    <!-- Pattern Image at the bottom -->
    <ImageView
        android:id="@+id/splash_pattern"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/splash_screen_bg" />

</RelativeLayout>
