<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5EDF3"
    android:padding="40dp">


    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_user_girl"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_imagepick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="35dp"
        android:src="@drawable/edit_photo"
        android:backgroundTint="@color/mustard"
        android:contentDescription="editimage"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        android:layout_marginEnd="-10dp"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/name_label"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="12dp"
        android:ems="20"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_name" />

    <EditText
        android:id="@+id/edit_birthday"
        android:focusable="false"
        android:clickable="true"
        android:importantForAccessibility="yes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/birthday_calender"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="none"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_email" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/address"
        android:drawablePadding="12dp"
        android:hint="@string/address_label"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_birthday" />

    <EditText
        android:id="@+id/edit_parent_name_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/Caregiver1_label"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_address" />


    <EditText
        android:id="@+id/edit_parent_name_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="12dp"
        android:ems="15"
        android:hint="@string/Caregiver2_label"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_parent_name_1" />


    <!-- Save Button -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_parent_name_2"
        app:layout_constraintVertical_bias="0.238" />


</androidx.constraintlayout.widget.ConstraintLayout>