<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5EDF3"
    android:padding="16dp">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_user_girl"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp" />

    <!-- User Name -->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Blue"
        android:fontFamily="@font/opensans_regular"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <!-- User Email -->
    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="16sp"
        android:textColor="@color/Blue"
        android:fontFamily="@font/opensans_regular"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <!-- Edit Button -->
    <Button
        android:id="@+id/edit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:fontFamily="@font/lalezar_regular"
        android:textSize="16sp"
        android:background="@drawable/mustard_button_homefragment"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white" />

    <!-- Birthday Information -->
    <LinearLayout
        android:id="@+id/birthday_layout"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_birthdate_btn"
            android:contentDescription="@string/birthday" />

        <TextView
            android:id="@+id/user_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Birthday"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/Blue"
            android:layout_marginStart="8dp"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Address Information -->
    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/birthday_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_address_btn"
            android:contentDescription="@string/address" />

        <TextView
            android:id="@+id/user_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Address"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/Blue"
            android:layout_marginStart="8dp"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Contacts Information -->
    <LinearLayout
        android:id="@+id/contacts_layout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_parents_caregivers_yellow"
            android:contentDescription="@string/contacts" />

        <TextView
            android:id="@+id/user_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Contacts"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/Blue"
            android:layout_marginStart="8dp"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>